navbar and overflow fixed

--- a/projects/css/javier.css
+++ b/projects/css/javier.css
@@ -1,6 +1,7 @@
 body, html{
 	background-color: #171616;
 	color: #666666;
+	overflow: hidden;
 }
 
 .main h1 {
